@@ -1,2 +1,2 @@
 ALTER TABLE graph_theme MODIFY graphthemeid bigint unsigned NOT NULL,
-			MODIFY noneworktimecolor varchar(6) DEFAULT 'CCCCCC' NOT NULL;
+			CHANGE noneworktimecolor nonworktimecolor varchar(6) DEFAULT 'CCCCCC' NOT NULL;
