@@ -1,2 +1,3 @@
 ALTER TABLE graph_theme MODIFY graphthemeid DEFAULT NULL;
 ALTER TABLE graph_theme MODIFY noneworktimecolor DEFAULT 'CCCCCC';
+ALTER TABLE graph_theme RENAME COLUMN noneworktimecolor TO nonworktimecolor;
